--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preload" href="css/estilos.css" as="style">
-    <link href="../css/estilos.css" rel="stylesheet">
+    <link href="css/estilos.css" rel="stylesheet">
 </head>
 <body>
   <div class="fondo">
     <header class="encabezado_contenedor"> 
         <div class="logo">
-             <img src="../img/icono.png" alt="Logo iREAD">
+             <img src="img/icono.png" alt="Logo iREAD">
         </div>
 
         <div class="enlace">
